<resources>
    <string name="app_name">Quera</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="quera">Quera</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="user_name">User name</string>
    <string name="name">Name</string>
    <string name="student_number">Student Number</string>
    <string name="college_name">college Name</string>
    <string name="create">Create</string>
    <string name="submit">Submit</string>
    <string name="answer">answer</string>
    <string name="score">Score :</string>
    <string name="set_score">Set Score</string>
    <string name="student_name">student name</string>
    <string name="back">Back</string>
    <string name="enter_the_exercise_name">Enter the Exercise name</string>
    <string name="enter_the_class_name">Enter the Class name</string>
    <string name="create">Create</string>
</resources>