<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateClassActivity"
    android:background="@drawable/welcome_bg"
    android:padding="10dp">


    <EditText
        android:id="@+id/createClassEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="10dp"
        android:background="@color/white"
        android:padding="10dp"
        android:hint="@string/enter_the_class_name" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/createClassEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:id="@+id/createClassButton"
        android:text="@string/create">
    </Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_below="@id/createClassButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/backInCreateClassButton"/>
</RelativeLayout>